# dsynth

./: .gitignore  BUILDING.md  BUILD_AND_DISTRIBUTE.md  BUILD_CROSS_PLATFORM.md  CLAP_MIGRATION_PLAN.md  CODE_REVIEW.md  CROSS_PLATFORM_GUIDE.md  Cargo.toml  DRIVE_RECALIBRATION_PLAN.md  EFFECTS_IMPLEMENTATION.md  EFFECTS_INTEGRATION.md  GITHUB_ACTIONS_GUIDE.md  KICK_CLAP_COMPLETE.md  KICK_README.md  KICK_USER_GUIDE.md  LOUDNESS_BENCHMARKS.md  MIGRATION_GUIDE.md  My Preset.json  My Preset2.json  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_PHASE4_SUMMARY.md  OPTIMIZATION_REPORT.md  OSCILLATOR_GUIDE.md  PHASE1_ENHANCEMENT_RESULTS.md  PLUGIN_PARAMS_TODO.md  PRESETS.md  PRESET_IMPLEMENTATION.md  QUICKSTART.md  QUICKWIN_OPTIMIZATIONS_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  SATURATION_BENCHMARK_RESULTS.md  SATURATION_IMPLEMENTATION_COMPLETE.md  SATURATOR_ENHANCEMENT_PROPOSALS.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_REVIEW.md  TRIPLE_BUFFER.md  VIZIA_GUI_PROGRESS.md  (+29 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
archive/legacy/src/: plugin_full.rs
archive/legacy/src/gui/: mod_old.rs  plugin_gui_backup.rs  plugin_gui_new.rs
assets/: AppIcon.icns  README.md  icon.xcf
assets/wavetables/: README.md
benches/: README.md  dsp_bench.rs  dsp_primitives.rs  kick_synth_perf.rs  main_synth_perf.rs  optimization_bench.rs  saturation_bench.rs  voice_latency_bench.rs  voice_plugin_latency.rs  voice_plugin_perf.rs
dsynth-clap/: Cargo.toml  FUTURE_VOICE_IDEAS.md  README.md  ROADMAP.md
dsynth-clap/examples/simple_synth/: Cargo.toml  bundle.sh  test_load  test_load.c
dsynth-clap/examples/simple_synth/src/: lib.rs
dsynth-clap/src/: descriptor.rs  entry.rs  instance.rs  lib.rs  param.rs  plugin.rs  processor.rs  state.rs
dsynth-clap/src/extensions/: audio_ports.rs  gui.rs  mod.rs  note_ports.rs  params.rs  state.rs
dsynth-clap/tests/: api_test.rs
examples/: additive_bright.json  additive_organ.json  bright_lead.json  deep_bass.json  fm_bell.json  fm_epiano.json  fm_metallic_pad.json  test_clipping.rs  test_extreme_settings.rs  test_stereo.rs  underwater.json  warm_pad.json
scripts/: bundle_all.sh  bundle_clap_macos.sh  bundle_clap_windows.bat  bundle_install_all.sh  bundle_kick_clap_macos.sh  bundle_kick_clap_windows.bat  bundle_standalone_macos.sh  bundle_voice_clap_macos.sh  bundle_voice_clap_windows.bat  check.sh  create_icons.sh  generate_wavetables.py  generate_wavetables_v2.py  install_clap_plugins.sh
src/: kick_clap.rs  lib.rs  main.rs  main_clap.rs  main_kick.rs  params.rs  params_kick.rs  params_voice.rs  plugin.rs  plugin_full.rs  preset.rs  randomize.rs  voice_clap.rs
src/audio/: engine.rs  kick_engine.rs  kick_voice.rs  mod.rs  output.rs  voice.rs  voice_engine.rs  voice_engine_old.rs
src/audio/engine/: mod.rs  tests.rs
src/audio/voice/: mod.rs  tests.rs
src/dsp/: downsampler.rs  envelope.rs  filter.rs  lfo.rs  lookahead_limiter.rs  mod.rs  oscillator.rs  pitch_detector.rs  pitch_quantizer.rs  signal_analyzer.rs  waveform.rs  wavetable.rs  wavetable_library.rs
src/dsp/analysis/: formant_detector.rs  mod.rs  pitch_detector.rs  sibilance_detector.rs  spectral_centroid.rs  transient_detector.rs  zcr_detector.rs
src/dsp/effects/: adaptive_saturator.rs  adaptive_saturator_old_backup.rs  auto_pan.rs  bitcrusher.rs  chorus.rs  clipper.rs  comb_filter.rs  compressor.rs  crossover.rs  de_esser.rs  delay.rs  distortion.rs  exciter.rs  flanger.rs  mod.rs  multiband_compressor.rs  multiband_distortion.rs  noise_gate.rs  parametric_eq.rs  phaser.rs  reverb.rs  ring_modulator.rs  saturator.rs  stereo_widener.rs  tremolo.rs  vocal_choir.rs  vocal_doubler.rs  waveshaper.rs
src/dsp/effects/delay/: mod.rs  smart_delay.rs
src/dsp/effects/distortion/: mod.rs  multiband_distortion.rs
src/dsp/effects/dynamics/: adaptive_compression_limiter.rs  adaptive_compressor.rs  clipper.rs  de_esser.rs  intelligent_de_esser.rs  lookahead_limiter.rs  mod.rs  multiband_compressor.rs  smart_gate.rs  transient_shaper.rs
src/dsp/effects/modulation/: auto_pan.rs  chorus.rs  flanger.rs  mod.rs  phaser.rs  ring_modulator.rs
src/dsp/effects/spectral/: crossover.rs  de_esser.rs  exciter.rs  intelligent_exciter.rs  mod.rs  parametric_eq.rs  (+1 more)
src/dsp/filters/: crossovers.rs  filter.rs  mod.rs  multiband_crossover.rs
src/dsp/modulation/: envelope.rs  envelope_follower.rs  lfo.rs  mod.rs  parameter_mapper.rs  processor_settings.rs
src/dsp/synthesis/: downsampler.rs  mod.rs  oscillator.rs  wavetable_library.rs
src/gui/: controls.rs  kick_gui.rs  kick_plugin_window.rs  messages.rs  mod.rs  mod_old.rs  plugin_gui.rs  plugin_gui_backup.rs  plugin_gui_new.rs  plugin_window.rs  standalone_window.rs  state.rs  theme.rs
src/gui/plugin_gui/: baseview_host.rs  helpers.rs  knob.rs  mod.rs  randomize.rs  sections.rs
src/gui/shared_ui/: dynamics.rs  filters.rs  helpers.rs  lfos.rs  master.rs  mod.rs  oscillators.rs  traits.rs
src/gui/standalone_gui/: additive_gui.rs  app.rs  keyboard.rs  messages.rs  mod.rs  preset_manager.rs  sections.rs
src/gui/vizia_gui/: messages.rs  mod.rs  plugin_window.rs  shared_ui.rs  standalone_window.rs  state.rs
src/gui/widgets/: envelope_editor.rs  knob.rs  mod.rs  param_checkbox.rs  param_cycle_button.rs  param_knob.rs  param_vslider.rs  vslider.rs
src/midi/: handler.rs  mod.rs
src/plugin/: convert.rs  gui_param_change.rs  kick_param_registry.rs  mod.rs  param_descriptor.rs  param_registry.rs  param_update.rs  params.rs  state.rs  voice_param_registry.rs  voice_param_registry.rs.backup  voice_param_registry_old.rs
src/plugin/clap/: descriptor.rs  kick_plugin.rs  kick_processor.rs  mod.rs  params.rs  plugin.rs  processor.rs  state.rs  voice_plugin.rs  voice_processor.rs
tests/: coverage_tests.rs  deesser_real_world.rs  diagnostic_tests.rs  integration_tests.rs  optimization_tests.rs  sibilance_diagnostic.rs  sound_destruction_tests.rs  unison_polyphony_tests.rs
tests/test_audio/: README.md  TESTING_GUIDE.md
tests/util/: meter.rs
(+37 files in other folders)
