[workspace]
members = [".", "dsynth-clap"]
exclude = ["dsynth-clap/examples/simple_synth"]

[package]
name = "dsynth"
version = "0.3.0"
edition = "2021"

[lib]
name = "dsynth"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = ["simd", "standalone"]
simd = []
standalone = ["vizia_winit", "cpal", "midir", "rfd"]
clap = ["vizia_baseview", "clap-sys", "dsynth-clap"]
kick-clap = ["vizia_baseview", "clap-sys", "dsynth-clap"]  # Kick drum CLAP plugin
voice-clap = ["vizia_baseview", "clap-sys", "dsynth-clap"] # Voice enhancer CLAP plugin
# Compatibility feature used by some older macro expansions during clippy runs.
cargo-clippy = []

[dependencies]
# VIZIA from git with both backends - baseview for CLAP plugin, winit for standalone
vizia = { git = "https://github.com/vizia/vizia.git", default-features = false, features = ["baseview", "winit", "x11"] }
# Direct access to vizia_winit for standalone Application (vizia doesn't re-export when both backends enabled)
vizia_winit = { git = "https://github.com/vizia/vizia.git", optional = true, features = ["x11"] }
# Direct access to vizia_baseview for CLAP plugin Application (same reason as above)
vizia_baseview = { git = "https://github.com/vizia/vizia.git", optional = true }
raw-window-handle = "0.5"
cpal = { version = "0.15", optional = true }
midir = { version = "0.10", optional = true }
triple_buffer = "6.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
indexmap = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap-sys = { version = "0.3", optional = true }
dsynth-clap = { path = "dsynth-clap", optional = true }
rfd = { version = "0.15", optional = true }
rand = "0.8"
image = "0.25"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
tempfile = "3.0"
serde_json = "1.0"

# Core DSP component benchmarks (oscillators, filters, envelopes)
[[bench]]
name = "dsp_primitives"
harness = false

# Main polyphonic synthesizer performance benchmarks
[[bench]]
name = "main_synth_perf"
harness = false

# Kick drum synthesizer performance benchmarks
[[bench]]
name = "kick_synth_perf"
harness = false

# Voice enhancement plugin performance benchmarks
[[bench]]
name = "voice_plugin_perf"
harness = false

# Voice enhancement plugin latency validation
[[bench]]
name = "voice_plugin_latency"
harness = false

# Standalone binary for main polyphonic synthesizer
[[bin]]
name = "dsynth"
path = "src/main.rs"
required-features = ["standalone"]