[package]
name = "dsynth-clap"
version = "0.1.0"
edition = "2021"
authors = ["DSynth Contributors"]
description = "Reusable CLAP plugin framework for DSynth synthesizers"
license = "MIT OR Apache-2.0"

[dependencies]
clap-sys = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
approx = "0.5"
